<resources>
    <string name="app_name">Old News</string>
    <!-- Toolbar menu -->
    <string name="action_search">Search</string>
    <string name="action_search_progress">Searching...</string>
    <string name="action_settings">Settings</string>

    <!-- Error messages -->
    <string name="error_fetch_results_failure">Failed to fetch articles.</string>
    <string name="error_connectivity_failure">No Connection, check your settings.</string>
    <string name="action_retry">Retry</string>


    <!-- Article details activity -->
    <string name="title_activity_article">Article</string>
    <string name="share_text">Hey, look this interesting New York times that I\'ve found !
        Headline: %1$s
        URL: %2$s
Shared using "codepath.com" the week 2 OldNews assignment app.</string>

    <!-- Settings Dialog title -->
    <string name="title_settings_dialog">Article Search Settings</string>
    <string name="text_begin_date">Begin Date</string>
    <string name="hint_begin_date">Search from date or later</string>
    <string name="date_format">MM/dd/yyyy</string>
    <string name="search_sort">Sort by</string>
    <string name="text_news_desk">News Desk</string>
    <string name="cb_title_arts">Arts</string>
    <string name="cb_title_fashion" >Fashion &amp; Style</string>
    <string name="cb_title_sports">Sports</string>
    <string name="title_apply_button">Apply</string>
    <string name="title_reset_button">Reset</string>

</resources>
