<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.ethp.codepath.oldnews.activities.SearchActivity">

    <item android:id="@+id/action_search"
        android:orderInCategory="10"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/miActionProgress"
        android:title="@string/action_search_progress"
        android:visible="false"
        android:orderInCategory="10"
        app:showAsAction="always"
        app:actionLayout="@layout/action_search_progress" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:onClick="onSettingsAction"
        app:showAsAction="never" />
</menu>
